; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_tty_ttydisc.c_ttydisc_echo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_tty_ttydisc.c_ttydisc_echo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32 }

@l = common dso_local global i32 0, align 4
@ECHO = common dso_local global i32 0, align 4
@ECHONL = common dso_local global i32 0, align 4
@CNL = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty*, i8, i32)* @ttydisc_echo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ttydisc_echo(%struct.tty* %0, i8 signext %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.tty*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store %struct.tty* %0, %struct.tty** %5, align 8
  store i8 %1, i8* %6, align 1
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* @l, align 4
  %9 = load i32, i32* @ECHO, align 4
  %10 = call i32 @CMP_FLAG(i32 %8, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %27, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @l, align 4
  %14 = load i32, i32* @ECHONL, align 4
  %15 = call i32 @CMP_FLAG(i32 %13, i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %12
  %18 = load i8, i8* %6, align 1
  %19 = sext i8 %18 to i32
  %20 = load i8, i8* @CNL, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp ne i32 %19, %21
  br i1 %22, label %26, label %23

23:                                               ; preds = %17
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23, %17, %12
  store i32 0, i32* %4, align 4
  br label %32

27:                                               ; preds = %23, %3
  %28 = load %struct.tty*, %struct.tty** %5, align 8
  %29 = load i8, i8* %6, align 1
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @ttydisc_echo_force(%struct.tty* %28, i8 signext %29, i32 %30)
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %27, %26
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @CMP_FLAG(i32, i32) #1

declare dso_local i32 @ttydisc_echo_force(%struct.tty*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
